Findbugs, some tweaks